# mcp-server

./: .gitignore  CLAUDE.md  COMMIT_MESSAGE_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  MCP-USAGE.md  README.md  config.py  pyproject.toml  requirements.txt  server.py  setup.sh  wikipedia_client.py  wikipedia_mcp_server.py  wikipedia_search.py
.claude/commands/: grammar-check.md
ai-instructions/: commit-instructions.md  grammar-check-instructions.md
docs/: extract_tools.md  mcp-architecture.md  quiz_tools.md  search_tools.md  todo_next.md  workflow_exposure.md
models/: domains.py  facts.py  quiz.py  search.py
services/: base.py  cache.py  grammar.py  http_client.py
services/domains/: dzieje.py  gwo.py  ipn.py  polona.py  przystanek_historia.py  superkid.py  wikipedia.py
tests/data/: jadwiga-dzieje.md  jadwiga-wikipedia-pl.md  jadwiga.md
tests/test_services/: test_cache.py  test_http_client.py
tools/: extract.py  grammar.py  quiz.py  search.py
utils/: dates.py  text.py  validators.py
work-log/: 2026-03-30.md  2026-04-01.md  2026-04-19.md  2026-04-20.md
